added nexus installation